**LAB ASSIGNMENT 9**
Main Features:
    - added 'admin' path to app-routing.midule.ts
    - added add-product component
        - Allows an admin to fill in a form to add data to the firebase dtatabase which will update the home page "New Releases" section.

**LAB ASSIGNMENT 8**
Main Features:
    - Created an Angular Fire database for the website
    - Replaced HTTPClient with AngularFireDatabase for home-layout.service.ts
    - Reimplemented service helper methods with AngularFireDatabase calls instead of HTTPClient calls.
    - Deployed website to this URL: https://dead-net-app.web.app/

**LAB ASSIGNMENT 7**
Main Features:
    - Created a service to retrieve the vertical cards used on the home layout.
        - These cards are still displayed programmatically using the *ngFor loop.
        - Service component is ./src/app/Vertical Card/home-layout.service.ts.

Bonus Features:
    - home-layout.service.ts now retrieves the news data from the firebase realtime database.
    - home-layout.service.ts now retrieves the features data from the firebase realtime database.

**LAB ASSIGNMENT 6**
Main Features:
    -Implemented a firebase realtime database in the usr-info folder of the dead-net app.
    -Added the HTTPClientModule in app.module.ts.
    
**LAB ASSIGNMENT 5**
Main Features:
    - Implemented and cleaned up vertical card component, header, and secondary header for New-Releases layout.
        -- Vertical card component is implemented with an *ngFor loop.
    - Implemented and cleaned up Grateful Gear Banner, Features section, and video card components for Home layout.
        -- Features section is implemented with an *ngFor loop.
    - Cleaned up and formated original components for Home Layout
Bonus Features:
    - Added Horizontal card components to the CD layout.
    - Added new footer component to the New-Releases layout

**LAB ASSIGNMENT 4**
Main Features:
    -Added Layout Components:
        -- 7 inch Singles Collection
        -- CD