@@ -1,0 +1,8 @@
+export interface AuthResponse {
+    idToken: string,
+    email: string,
+    refreshToken: string,
+    expiresIn: string,
+    localId: string,
+    registered?: boolean
+}
