@@ -4,19 +4,23 @@
             <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
                 <div class="input-group">
                     <span class="input-group-text">Email</span>
-                    <input type="text" class="form-control" placeholder="example@gmail.com" ngModel name="email" required email>
+                    <input type="text" class="form-control" placeholder="example@gmail.com" ngModel name="email"
+                        required email>
                 </div>
 
                 <div class="input-group">
                     <span class="input-group-text">Password</span>
-                    <input type="password" class="form-control" placeholder="Password" ngModel name="password" required password minlength="8">
+                    <input type="password" class="form-control" placeholder="Password" ngModel name="password" required
+                        password minlength="8">
                 </div>
 
-                <button class="btn btn-secondary" type="submit" [disabled]="!authForm.valid">
+                <button class="btn btn-secondary" type="submit" [disabled]="!authForm.valid"
+                    (click)="buttonClicked='Login'">
                     Login
                 </button>
 
-                <button class="btn btn-secondary" type="submit" [disabled]="!authForm.valid">
+                <button class="btn btn-secondary" type="submit" [disabled]="!authForm.valid"
+                    (click)="buttonClicked='Signup'">
                     Signup
                 </button>
             </form>
