@@ -1,6 +1,8 @@
 import { Component, OnInit } from '@angular/core';
 import { NgForm } from '@angular/forms';
+import { Observable } from 'rxjs';
 import { AuthenticationService } from './authentication.service';
+import { AuthResponse } from './authResponse';
 
 @Component({
   selector: 'dn-authentication',
@@ -8,24 +10,33 @@ import { AuthenticationService } from './authentication.service';
   styleUrls: ['./authentication.component.css']
 })
 export class AuthenticationComponent implements OnInit {
+  public buttonClicked!: string;
+  private authObservable!: Observable<AuthResponse>;
 
-  constructor(private auth:AuthenticationService) { }
+  constructor(private auth: AuthenticationService) { }
 
   ngOnInit(): void {
   }
 
-  onSubmit(data:NgForm){
-    console.log("Button clicked");
+  onSubmit(data: NgForm) {
+    console.log("Button clicked = " + this.buttonClicked);
     console.log(data.value);
-    data.reset();
 
-    this.auth.signup(data.value.email, data.value.password).subscribe(data => {
+    if (this.buttonClicked == "Signup") {
+      this.authObservable = this.auth.signup(data.value.email, data.value.password);
+    } else if (this.buttonClicked == "Login") {
+      this.authObservable = this.auth.login(data.value.email, data.value.password);
+    }
+
+    this.authObservable.subscribe(data => {
       console.log(data);
 
     },
-    error => {
-      console.log(error);
-    }
+      error => {
+        console.log(error);
+      }
     )
+
+    data.reset();
   }
 }
